update finemap attempt with acbd6 data

--- a/kathryn/bulk_data/finemapping/finemapr/run_finemap/region.master
+++ b/kathryn/bulk_data/finemapping/finemapr/run_finemap/region.master
@@ -1,2 +1,2 @@
-z;ld;snp;config;cred;log;n_samples
-region.z;region.ld;region.snp;region.config;region.cred;region.log;5363
+z;ld;snp;config;log;n-ind
+region.z;region.ld;region.snp;region.config;region.log;410
